add first photo

--- a/index.html
+++ b/index.html
@@ -30,16 +30,39 @@
           <div class="logo">
             <img src="./img/boolean-logo.png" alt="logo" width="100px" />
           </div>
-          <div class="icons">
-            <i class="fa-solid fa-user"></i>
-            <i class="fa-regular fa-heart"></i>
-            <i class="fa-solid fa-bag-shopping"></i>
-          </div>
+          <ul class="icons">
+            <li><i class="fa-solid fa-user"></i></li>
+            <li><i class="fa-regular fa-heart"></i></li>
+            <li><i class="fa-solid fa-bag-shopping"></i></li>
+          </ul>
         </div>
       </div>
     </header>
 
-    <main></main>
+    <main>
+      <div class="container">
+        <div class="wrapper">
+          <div class="card">
+            <div class="card-image">
+              <img src="./img/1.webp" alt="tshirt" width="100%" />
+              <div class="heart">&hearts;</div>
+              <div class="discount">
+                <span class="badge">-50%</span>
+                <span class="badge material">Sostenibilitá</span>
+              </div>
+              <div class="card-hover">
+                <img src="./img/1b.webp" alt="tshirt-b" width="100%" />
+              </div>
+            </div>
+            <div class="card-content">
+              <p class="brand"></p>
+              <h2></h2>
+              <p class="price"></p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
 
     <footer></footer>
   </body>
