--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <ul>
               <li><a href="">Uomo</a></li>
               <li><a href="">Donna</a></li>
-              <li><a href="">Bmabino</a></li>
+              <li><a href="">Bambino</a></li>
             </ul>
           </div>
           <div class="logo">
@@ -41,7 +41,8 @@
 
     <main>
       <div class="container">
-        <div class="wrapper">
+        <div class="row">
+          <!-- FIRST ITEM -->
           <div class="card">
             <div class="card-image">
               <img src="./img/1.webp" alt="tshirt" width="100%" />
@@ -55,15 +56,116 @@
               </div>
             </div>
             <div class="card-content">
-              <p class="brand"></p>
-              <h2></h2>
-              <p class="price"></p>
+              <p class="brand">Levi's</p>
+              <h4>RELAXED FIT TEE UNISEX</h4>
+              <p class="price">
+                <span class="final">14,99 &#8364;</span
+                ><span class="start"> 29,99 &#8364;</span>
+              </p>
+            </div>
+          </div>
+          <!-- SECOND ITEM -->
+          <div class="card">
+            <div class="card-image">
+              <img src="./img/2.webp" alt="tshirt" width="100%" />
+              <div class="heart">&hearts;</div>
+              <div class="discount">
+                <span class="badge">-30%</span>
+              </div>
+              <div class="card-hover">
+                <img src="./img/2b.webp" alt="tshirt-b" width="100%" />
+              </div>
+            </div>
+            <div class="card-content">
+              <p class="brand">Guess</p>
+              <h4>ROSES TEE</h4>
+              <p class="price">
+                <span class="final">20,99 &#8364;</span
+                ><span class="start"> 29,99 &#8364;</span>
+              </p>
+            </div>
+          </div>
+          <!-- THIRD ITEM -->
+          <div class="card">
+            <div class="card-image">
+              <img src="./img/3.webp" alt="tshirt" width="100%" />
+              <div class="heart">&hearts;</div>
+              <div class="discount">
+                <span class="badge">-30%</span>
+              </div>
+            </div>
+            <div class="card-content">
+              <p class="brand">Come Zucchero Filato</p>
+              <h4>VOGLIA DI COLOR PASTELLO</h4>
+              <p class="price">
+                <span class="final">129,99 &#8364;</span
+                ><span class="start"> 184,99 &#8364;</span>
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <!-- FOURTH ITEM -->
+          <div class="card">
+            <div class="card-image">
+              <img src="./img/4.webp" alt="tshirt" width="100%" />
+              <div class="heart">&hearts;</div>
+              <div class="discount">
+                <span class="badge">-50%</span>
+                <span class="badge material">Sostenibilitá</span>
+              </div>
+              <div class="card-hover">
+                <img src="./img/4b.webp" alt="tshirt-b" width="100%" />
+              </div>
+            </div>
+            <div class="card-content">
+              <p class="brand">Levi's</p>
+              <h4>TEE UNISEX</h4>
+              <p class="price">
+                <span class="final">14,99 &#8364;</span
+                ><span class="start"> 29,99 &#8364;</span>
+              </p>
+            </div>
+          </div>
+          <!-- FIFTH ITEM -->
+          <div class="card">
+            <div class="card-image">
+              <img src="./img/5.webp" alt="tshirt" width="100%" />
+              <div class="heart">&hearts;</div>
+              <div class="card-hover">
+                <img src="./img/5b.webp" alt="tshirt-b" width="100%" />
+              </div>
+            </div>
+            <div class="card-content">
+              <p class="brand">Maya Deluxe</p>
+              <h4>STRIPE BODICE</h4>
+              <p class="price">
+                <span class="final">99,99 &#8364;</span>
+              </p>
+            </div>
+          </div>
+          <!-- SIXTH ITEM -->
+          <div class="card">
+            <div class="card-image">
+              <img src="./img/6.webp" alt="tshirt" width="100%" />
+              <div class="heart">&hearts;</div>
+              <div class="discount">
+                <span class="badge material">Sostenibilitá</span>
+              </div>
+              <div class="card-hover">
+                <img src="./img/6b.webp" alt="tshirt-b" width="100%" />
+              </div>
+            </div>
+            <div class="card-content">
+              <p class="brand">Esprit</p>
+              <h4>MAGLIONE BLACK</h4>
+              <p class="price">
+                <span class="final">29,99 &#8364;</span>
+              </p>
             </div>
           </div>
         </div>
       </div>
     </main>
-
-    <footer></footer>
   </body>
 </html>
