--- a/index.html
+++ b/index.html
@@ -167,5 +167,29 @@
         </div>
       </div>
     </main>
+    <footer>
+      <div class="container">
+        <div class="row">
+          <div class="info">
+            <h3>Boolando s.r.l.</h3>
+            <ul>
+              <li>Informazioni legali</li>
+              <li>Informativa sulla privacy</li>
+              <li>Diritto di recesso</li>
+            </ul>
+          </div>
+          <div class="media">
+            <h5>Trovaci anche su:</h5>
+            <ul class="links">
+              <li><i class="fa-brands fa-square-twitter"></i></li>
+              <li><i class="fa-brands fa-square-facebook"></i></li>
+              <li><i class="fa-brands fa-square-instagram"></i></li>
+              <li><i class="fa-brands fa-square-pinterest"></i></li>
+              <li><i class="fa-brands fa-square-youtube"></i></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
