--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
     <header>
       <div class="container">
         <div class="row">
-          <div class="sizes">
+          <nav class="sizes">
             <ul>
               <li><a href="">Uomo</a></li>
               <li><a href="">Donna</a></li>
               <li><a href="">Bambino</a></li>
             </ul>
-          </div>
+          </nav>
           <div class="logo">
             <img src="./img/boolean-logo.png" alt="logo" width="100px" />
           </div>
           <ul class="icons">
             <li><i class="fa-solid fa-user"></i></li>
-            <li><i class="fa-regular fa-heart"></i></li>
+            <li><i class="fa-solid fa-heart"></i></li>
             <li><i class="fa-solid fa-bag-shopping"></i></li>
           </ul>
         </div>
