--- a/index.html
+++ b/index.html
@@ -173,19 +173,29 @@
           <div class="info">
             <h3>Boolando s.r.l.</h3>
             <ul>
-              <li>Informazioni legali</li>
-              <li>Informativa sulla privacy</li>
-              <li>Diritto di recesso</li>
+              <li><a href="#">Informazioni legali</a></li>
+              <li><a href="#">Informativa sulla privacy</a></li>
+              <li><a href="#">Diritto di recesso</a></li>
             </ul>
           </div>
           <div class="media">
             <h5>Trovaci anche su:</h5>
             <ul class="links">
-              <li><i class="fa-brands fa-square-twitter"></i></li>
-              <li><i class="fa-brands fa-square-facebook"></i></li>
-              <li><i class="fa-brands fa-square-instagram"></i></li>
-              <li><i class="fa-brands fa-square-pinterest"></i></li>
-              <li><i class="fa-brands fa-square-youtube"></i></li>
+              <li>
+                <a href="#"><i class="fa-brands fa-square-twitter"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="fa-brands fa-square-facebook"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="fa-brands fa-square-pinterest"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="fa-brands fa-square-youtube"></i></a>
+              </li>
             </ul>
           </div>
         </div>
